--- a/styles.css
+++ b/styles.css
@@ -529,6 +529,148 @@ ul li a.active,ul li a:hover {
   }
 }
 
+form{
+  background: #E9E2DE;
+  width: 640px;
+  margin: 50px auto;
+  max-width: 97%;
+  border-radius: 4px;
+  padding: 55px 30px;
+  margin-top: 10rem;
+  border-radius: 20px;
+  border: 2px solid #898886;
+  animation: fade-up 3s;
+}
+
+form .title h5{
+  font-family: 'Syncopate', sans-serif;
+  color: #191919;
+  letter-spacing: 6px;
+  border-bottom: 2px solid #191919;
+  display: inline-block;
+  padding-bottom: 8px;
+  margin-bottom: 32px;
+
+}
+
+form .half{
+  display: flex;
+  justify-content: space-between;
+}
+
+.item label {
+  color: #191919;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 600;
+}
+
+form .half .item{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 24px;
+  width: 48%;
+}
+
+
+form label{
+  display: block;
+  font-size: 13px;
+  letter-spacing: 3.5px;
+  margin-bottom: 16px;
+}
+
+form .half .item input{
+  border-radius: 10px;
+  border: 2px solid #191919;
+  outline: 0;
+  padding: 16px;
+  width: 100%;
+  height: 44px;
+  background: transparent;
+  font-size: 17px;
+}
+
+form .full{
+  margin-bottom: 24px;
+}
+
+.full label {
+  color: #191919;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 600;
+}
+
+form .full textarea{
+  background: transparent;
+  border-radius: 10px;
+  border: 2px solid #191919;
+  outline: 0;
+  padding: 12px 16px;
+  width: 100%;
+  height: 200px;
+  font-size: 17px;
+}
+
+form .action{
+  margin-bottom: 32px;
+}
+
+form .action input{
+  background: transparent;
+  border-radius: 4px;
+  border: 2px solid #191919;
+  cursor: pointer;
+  font-size: 13px;
+  font-weight: 600;
+  height: 44px;
+  letter-spacing: 3px;
+  outline: 0;
+  padding: 0 20px 0 22px;
+  margin-right: 10px;
+
+}
+
+form .action input[type="submit"]{
+  background: #898886;
+  color: #191919;
+  border-radius: 10px;
+  font-family: 'Roboto', sans-serif;
+}
+
+form .action input[type="reset"]{
+  color: #191919;
+  border-radius: 10px;
+  font-family: 'Roboto', sans-serif;
+}
+
+form .icons a{
+  border: 2px solid #191919;
+  border-radius: 50%;
+  line-height: 36px;
+  text-align: center;
+  font-weight: 600;
+  width: 38px;
+  margin-right: 10px;
+  color: #191919;
+}
+
+
+@media (max-width: 480px){
+  form .half{
+    flex-direction: column;
+  }
+  form .half .item{
+    width: 100%;
+  }
+  form .action{
+    display: flex;
+    flex-direction: column;
+  }
+  form .action input{
+    margin-bottom: 10px;
+    width: 100%;
+  }
+}
 
 
 
