--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@500&family=Syncopate:wght@400;700&display=swap');
 
 :root {
-  --primary-color: #E9E2DE;
+  --primary-color: #CCCBCB;
   --text-dark: #191919;
   --text-light: #5F5F5E;
   --max-width: 2000px;
